WIP: backporting to java 7 (converts stream/function to guava)